--- a/public/css/card.css
+++ b/public/css/card.css
@@ -146,7 +146,7 @@
     font-family: "roboto", sans-serif;
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-device-width: 400px) {
     .container {
         width: 100%;
         margin: 0px;
