--- a/public/css/card.css
+++ b/public/css/card.css
@@ -13,6 +13,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: start;
+    margin-bottom: 100px;
 }
 .card-deck .card {
     background-color: whitesmoke;
@@ -33,7 +34,7 @@
    
 }
 .card-body {
-    background-color: wheat;
+    /* background-color: wheat; */
     padding-left: 5px;
     margin-bottom: 2px;
     padding-bottom: 0px;
