--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,4 +1,8 @@
-     
+.main-header {
+    height: 50px ;
+    width: 100%;
+    background-color:#0093E3 ;
+}   
 #header {
     background-color:#0093E3 ;
     display: flex;
