--- a/public/css/card.css
+++ b/public/css/card.css
@@ -15,17 +15,35 @@
     justify-content: start;
     margin-bottom: 100px;
 }
+.card-deck a {
+    color: black;
+ }
+ .card-deck a:hover {
+     text-decoration: none;
+     cursor: pointer;
+ }
 .card-deck .card {
     background-color: whitesmoke;
-    height: 460px;
-    max-width: 380px;
-    min-width: 340px;
+    height: 470px;
+    max-width: 300px;
+    min-width: 290px;
     margin-left: 0px;
     padding: 0px;
     overflow: hidden;
     margin-right: 10px;
     margin-bottom: 10px;
     
+}
+.card-deck .card:hover {
+    border: 1px solid black;
+    transform: scale(1.01, 1.01);
+    box-shadow:
+    0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+    0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+    0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12)
 }
 .card-img-top {
     /* background-color: thistle; */
@@ -96,11 +114,12 @@
 
 .card-footer .pdt-rate {
     height: 40px;
-    width: 60%;
+    width: 50%;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    padding-top: 2px;
 }
 
 
@@ -112,8 +131,8 @@
     float: left;
 }
 
-.grey-stars {
-    height: 100%;
+.grey-stars { 
+   height: 100%;
 }
 
 .filled-stars {
@@ -129,13 +148,13 @@
 .filled-stars:before,
 .grey-stars:before {
     content: "\2605\2605\2605\2605\2605";
-    font-size: 40px;
+    font-size: 20px;
     letter-spacing: 0px;
     line-height: 40px;
 }
 .card-footer .filled-stars:before,
 .card-footer .grey-stars:before {
-    font-size: 40px;
+    font-size: 30px;
     line-height: 23px;
 }
 /* Average rating */
