--- a/public/css/categories.css
+++ b/public/css/categories.css
@@ -2,11 +2,12 @@
     .categories {
     background: white;
     overflow: auto;
-    position: sticky;
+    position: relative;
     top:0;
     left: 0;
     padding: 15px 0;
     white-space: nowrap;
+    text-align: center;
     }
     .links {
     padding: 5px 10px;
