--- a/public/css/card.css
+++ b/public/css/card.css
@@ -13,7 +13,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: start;
-    margin-bottom: 100px;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-bottom: 0;
+    padding-bottom: 200px;
 }
 .card-deck a {
     color: black;
@@ -30,8 +33,8 @@
     margin-left: 0px;
     padding: 0px;
     overflow: hidden;
-    margin-right: 10px;
-    margin-bottom: 10px;
+    margin-right: 20px;
+    margin-bottom: 20px;
     
 }
 .card-deck .card:hover {
