--- a/public/css/applicant.css
+++ b/public/css/applicant.css
@@ -19,7 +19,8 @@
 
 #Applicant-page {
     margin-top: 40px;
-    margin-bottom: 200px;
+    margin-bottom: 0;
+    padding-bottom: 200px;
 }
 .applicant-details {
     background: #f9f9f9;
